# cpp-fun

./: .gitignore  git.bash  install-ftxui.bash  open
ampersand/: main.cpp
chess/: CMakeLists.txt  main.cpp  main10.hpp  main11.cpp  main11.hpp  main12.cpp  main12.hpp  main2.cpp  main3.cpp  main6-1.hpp  main6-2.cpp  main6-3.hpp  main6-4.cpp  main6.cpp  main7.cpp  main8.cpp  main9.hpp  notes.txt  see.hpp
chess/main10/: main10.hpp
chess/main7/: main7-2.cpp
chess/notes/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main8.cpp
chess/notes/main10/: main.cpp
chess/notes/main11/: main11.hpp
chess/notes/main6/: main6-1.hpp  main6-2.cpp  main6.cpp
chess/notes/main7/: main7-1.cpp  main7-3.cpp
chess/notes/main9/: main.cpp  main9-decorator.cpp  main9.cpp  main9.hpp
command-pattern/: CMakeLists.txt  main  main.cpp
command-pattern/prev/: main.prev
ftxui/: open-ftxui
ftxui-app/: CMakeLists.txt  hello-world.cpp  open_config
ftxui/examples/: make_projects.bash
ftxui/examples/component/button/: main.cpp
ftxui/examples/component/button_animated/: main.cpp
ftxui/examples/component/button_in_frame/: main.cpp
ftxui/examples/component/button_style/: .open_config  main.cpp
ftxui/examples/component/canvas_animated/: main.cpp
ftxui/ftxui-app/: CMakeLists.txt  hello-world.hpp  main.cpp
ftxui/sliding-puzzle/: CMakeLists.txt  bootstrap.hpp  main.cpp  sliding_puzzle.cpp  sliding_puzzle.hpp
hello-world/: .open_config  CMakeLists.txt  hello.cpp  main  main.cpp  open_config
hello-world/prev/: hello.prev
students/: main.cpp  main.hpp
(+4 files in other folders)
